--- a/src/scss/index.css
+++ b/src/scss/index.css
@@ -1,12 +1,3 @@
-/* box-sizing for all elements in html */
-html, * {
-  box-sizing: border-box !important;
-}
-*::before,
-*::after {
-  box-sizing: inherit !important;
-}
-
                         /* Calibre fonts */
 
 /* Calibre Regular */
@@ -41,7 +32,18 @@ html, * {
   font-weight: 600;
 }
 
-/* basic styles */
+                        /* basic styles */
+
+/* box-sizing for all elements in html */
+html, * {
+  box-sizing: border-box !important;
+}
+*::before,
+*::after {
+  box-sizing: inherit !important;
+}
+
+/* body */
 body {
   margin: 0;
   padding: 0;
@@ -49,4 +51,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   scroll-behavior: smooth;
+}
+
+a {
+  text-decoration: none !important;
 }
