--- a/src/scss/stylesheet.css
+++ b/src/scss/stylesheet.css
@@ -1,5 +1,23 @@
 .App {
   background: #EDEBE3;
+  padding: 0 15%;
+}
+
+.App .flexWrapper {
+  display: flex;
+  margin: 100px auto;
+}
+
+.App .gallery {
+  max-width: 700px;
+}
+
+.App .gallery .carousel-inner {
+  border-radius: 20px;
+  transition: all 0.1s;
+  -webkit-box-shadow: 0px 0px 36px 18px rgba(0, 0, 0, 0.12);
+  -moz-box-shadow: 0px 0px 36px 18px rgba(0, 0, 0, 0.12);
+  box-shadow: 0px 0px 36px 18px rgba(0, 0, 0, 0.12);
 }
 
 .navbar .nav-link {
@@ -24,4 +42,15 @@
 #kontakt #facebook:hover {
   color: #B4966E;
   transition: all 0.3s;
+}
+
+@media screen and (max-width: 1400px) {
+  .App {
+    padding: 0 10%;
+  }
+  .App .flexWrapper {
+    display: flex;
+    flex-direction: column;
+    margin: 50px auto;
+  }
 }
