added education page

--- a/src/scss/stylesheet.scss
+++ b/src/scss/stylesheet.scss
@@ -8,7 +8,7 @@ $shadowBlack: rgba(0,0,0,0.12);
 
 //app
 .App {
-  background: $ceremColor;
+  background: $eduColor;
   padding: 0 15%;
 
   .flexWrapper {
