--- a/src/scss/stylesheet.css
+++ b/src/scss/stylesheet.css
@@ -1,3 +1,15 @@
+@keyframes scale {
+  0% {
+    transform: scale(1);
+  }
+  30% {
+    transform: scale(0.98);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
 .App {
   background: #C0D8D8;
   padding: 0 15%;
@@ -10,6 +22,10 @@
 
 .App .gallery {
   max-width: 700px;
+}
+
+.App .gallery:hover {
+  animation: scale 1s;
 }
 
 .App .gallery .carousel-inner {
