--- a/src/scss/stylesheet.scss
+++ b/src/scss/stylesheet.scss
@@ -6,6 +6,18 @@ $ceremColor: #E1C1B4;
 $activeTextColor: #B4966E;
 $shadowBlack: rgba(0,0,0,0.12);
 
+@keyframes scale {
+  0% {
+    transform: scale(1);
+  }
+  30% {
+    transform: scale(0.98);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
 //app
 .App {
   background: $eduColor;
@@ -18,6 +30,9 @@ $shadowBlack: rgba(0,0,0,0.12);
 
   .gallery {
     max-width: 700px;
+    &:hover {
+      animation: scale 1s;
+    }
 
     .carousel-inner {
       border-radius: 20px;
