--- a/src/scss/stylesheet.css
+++ b/src/scss/stylesheet.css
@@ -10,8 +10,25 @@
   }
 }
 
-.App {
+body.solo-bg {
+  background: #EDEBE3;
+  transition: background 0.4s ease;
+  -webkit-transition: background 0.4s ease;
+}
+
+body.edu-bg {
   background: #C0D8D8;
+  transition: background 0.4s ease;
+  -webkit-transition: background 0.4s ease;
+}
+
+body.cerem-bg {
+  background: #E1C1B4;
+  transition: background 0.4s ease;
+  -webkit-transition: background 0.4s ease;
+}
+
+.App {
   padding: 0 15%;
 }
 
@@ -60,7 +77,7 @@
   transition: all 0.3s;
 }
 
-@media screen and (max-width: 1400px) {
+@media screen and (max-width: 1500px) {
   .App {
     padding: 0 5%;
     transition: padding 0.5s;
