--- a/src/scss/stylesheet.scss
+++ b/src/scss/stylesheet.scss
@@ -22,20 +22,20 @@ $shadowBlack: rgba(0,0,0,0.12);
 //body
 body.solo-bg {
   background: $soloColor;
-  transition: background 0.4s ease;
-  -webkit-transition: background 0.4s ease;
+  transition: background 0.5s ease-out;
+  -webkit-transition: background 0.5s ease-out;
 }
 
 body.edu-bg {
   background: $eduColor;
-  transition: background 0.4s ease;
-  -webkit-transition: background 0.4s ease;
+  transition: background 0.5s ease-out;
+  -webkit-transition: background 0.5s ease-out;
 }
 
 body.cerem-bg {
   background: $ceremColor;
-  transition: background 0.4s ease;
-  -webkit-transition: background 0.4s ease;
+  transition: background 0.5s ease-out;
+  -webkit-transition: background 0.5s ease-out;
 }
 
 //app
