--- a/src/scss/stylesheet.css
+++ b/src/scss/stylesheet.css
@@ -61,7 +61,7 @@ body.cerem-bg {
 
 .navbar .nav-link:hover, .navbar .nav-link.active {
   color: #B4966E;
-  transition: all 0.3s;
+  transition: color 0.3s;
 }
 
 #kontakt #phone {
@@ -75,18 +75,21 @@ body.cerem-bg {
 #kontakt #facebook:hover {
   color: #B4966E;
   transition: all 0.3s;
+  -webkit-transition: all 0.3s;
 }
 
 @media screen and (max-width: 1500px) {
   .App {
     padding: 0 5%;
     transition: padding 0.5s;
+    -webkit-transition: padding 0.5s;
   }
   .App .flexWrapper {
     display: flex;
     flex-direction: column;
     margin: 50px auto;
     transition: all 0.3s;
+    -webkit-transition: all 0.3s;
   }
 }
 
@@ -97,5 +100,6 @@ body.cerem-bg {
   .App .navbar .nav-link {
     padding-bottom: 10px;
     transition: padding-bottom 0.3s;
+    -webkit-transition: padding-bottom 0.3s;
   }
 }
